# experiments-ai

./: .gitignore
mcp/: app.py  app_history.py  download.py  gemini_client.py  google_setup.py  pyproject.toml  schemas.py  streamlit_frontend.py  test.py
mcp/mcp_clients/: google_calendar.py  google_scholar.py  registry.py  semantic_scholar.py
mcp/surveyor/providers/: __init__.py  acm.py  arxiv.py  emptyprovider.py  ieeexplore.py  multi_providers.py  provider.py  sciencedirect.py  springer.py
mcp/surveyor/semantic_scholar/: api.py
mcp/surveyor/utils/: urls.py
prompt_injection/: chat_log.jsonl  chat_ollama.py  index.html  index3.html  payload.md  somesurprises.html
